@@ -18,3 +18,4 @@ showAnswer=Show answer
 checkAnswer=Check answer
 ok=OK
 matchingGame=Matching Game
+mixedNumbers=Mixed Numbers
