@@ -1,3 +1,4 @@
+Fraction Matcher: Added a new tab for "mixed numbers"
 Fraction Matcher: Removed unused field, see #3357
 # 0.00.97 (65476) Jun 27, 2012
 Build a Fraction: Only show the "add container" button if there is at least one fraction > 1
